  bbda5bb6, 8873c300

- Added new (and still experimental) ~environment~ prefix slot, which
  can be used to, for example, implement a cache to be used while
  refreshing the menu.  05c011b8

- When navigating through the menu using the keyboard or hovering a
  suffix command with the mouse, information about the command is now
  shown in the echo area or using a tooltip.  #282

* v0.7.7    2024-10-04

Bug fix:

- Fix a regression introduced by the previous commit, which broke
  dynamic prefixes that use a ~:setup-children~ function to prepare
  their suffixes.  #313

* v0.7.6    2024-10-01

- ~transient-active-prefix~ now accepts a single prefix symbol, in place
  of a list of such symbols.  #307

- ~other-frame-prefix~ and ~other-window-prefix~ can now be used while a
  transient prefix is active.  #305

- Added new macro ~transient-with-help-window~ for use in ~:show-help~
  functions.  #309

* v0.7.5    2024-09-01

- Updated tooling.

Bug fixes:

- ~static-if~ is now used correctly.  0e35673e

- When an existing window ends up being used to display the transient
  buffer, then the previous value of the ~no-other-window~ parameter is
  now restored, when the transient is exited.  #302

- The names assigned to suffixes, which are defined using lambdas in
  the prefix definition, are now guaranteed to be unique.  #304

* v0.7.4    2024-08-05

- Added new function ~transient-active-prefix~.

* v0.7.3    2024-07-13

- Refactored code responsible for inserting columns.

Bug fix:

- The ~transient-current-*~ variables are intended to only be used by
  suffix commands, when they are invoked from a prefix.  Previously
  they were only cleared when the prefix is ultimately exited, which
  meant that they unintentionally were accessible in timers.  Now the
  values of these variables are nil when used outside their intended
  scope.  0e0ece32, f2cb28a5

* v0.7.2    2024-06-24

- Added support for adding suffixes that activate value presets.  #183

Bug fix:
